compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__assert__assert_variable.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/assert.rs
assertion_line: 5
expression: "\npub fn main() {\n  let x = True\n  assert x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let x = True
  assert x
}


----- COMPILED JAVASCRIPT
import { makeError } from "../gleam.mjs";

const FILEPATH = "src/module.gleam";

export function main() {
  let x = true;
  if (!x) {
    throw makeError(
      "assert",
      FILEPATH,
      "my/mod",
      4,
      "main",
      "Assertion failed.",
      {
        kind: "expression",
        expression: { kind: "expression", value: false, start: 41, end: 42 },
        start: 34,
        end: 42,
        expression_start: 41
      }
    )
  }
  return undefined;
}
